--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,12 @@
 
 /* Your CSS Code here. */
+.holder{
+display: flex;
+	justify-content:center;
+	flex-wrap: wrap;
+}
+.item{
+	width: 100px;
+	hieght: 100px;
+	font-size: 40px;
+}
